# Time_series_currency-exchange

./: .gitignore  Readme.md  pyproject.toml
Notebook/: model.ipynb
