[project]
name = "entorno-casa-de-cambio"
version = "0.1.0"
description = "entorno para el proyecto de casa de cambio"
authors = [
    {name = "Ronald Espinoza"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numba (>=0.61.0,<0.62.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "holiday (>=1.0.0,<2.0.0)",
    "feature-engine (>=1.8.3,<2.0.0)",
    "holidays (>=0.67,<0.68)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
